--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
                             <div class="swiper-slide">
                                 <img src="/img/test/4.jpg" alt="Маршрут 4">
                             </div>
+                            <div class="swiper-slide">
+                                <img src="/img/test/5.jpg" alt="Маршрут 5">
+                            </div>
                                 <!-- More slides -->
                         </div>
                         <div class="swiper-pagination"></div>
@@ -150,6 +153,9 @@
                             <div class="swiper-slide">
                                 <img src="/img/test/4.jpg" alt="Маршрут 4">
                             </div>
+                            <div class="swiper-slide">
+                                <img src="/img/test/5.jpg" alt="Маршрут 5">
+                            </div>
                                 <!-- More slides -->
                         </div>
                         <div class="swiper-pagination"></div>
@@ -187,6 +193,9 @@
                             <div class="swiper-slide">
                                 <img src="/img/test/4.jpg" alt="Маршрут 4">
                             </div>
+                            <div class="swiper-slide">
+                                <img src="/img/test/5.jpg" alt="Маршрут 5">
+                            </div>
                                 <!-- More slides -->
                         </div>
                         <div class="swiper-pagination"></div>
@@ -205,6 +214,7 @@
                     <div class="swiper-slide"><img src="/img/test/2.jpg" alt="Gallery 2"></div>
                     <div class="swiper-slide"><img src="/img/test/3.jpg" alt="Gallery 3"></div>
                     <div class="swiper-slide"><img src="/img/test/4.jpg" alt="Gallery 4"></div>
+                    <div class="swiper-slide"><img src="/img/test/5.jpg" alt="Gallery 5"></div>
                 </div>
                 <div class="swiper-pagination"></div>
                 <div class="swiper-button-prev"></div>
